start dev dataset

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,7 @@
-data:
-  raw:
-    root: 'data/raw'
-    train: 'data/raw/train'
-    test: 'data/raw/test'
+path:
+  data:
+    root: 'data'
+    raw:
+      root: 'data/raw'
+      train: 'data/raw/train'
+      test: 'data/raw/test'
