--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,9 +1,9 @@
 random_state: 42
-
-val_size: 0.2
-
+max_epochs: 10
 model_id: 'facebook/mask2former-swin-large-coco-instance'
-
-batch_size: 64
-num_workers: 12
+val_size: 0.2
+dim: '0,1'
+batch_size: 8
+# num_workers: 12
+num_workers: 0
 lr: 0.001
