--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -11,8 +11,8 @@ val_size: 0.2
 dim: '0,1'
 
 batch_size: 16
-#num_workers: 23
-num_workers: 0
+num_workers: 23
+#num_workers: 0 # on MPS MacBook
 
 lr: 0.0001
 weight_decay: 0.05
