--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -6,13 +6,11 @@ model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
 num_labels: 100
 num_channels: 3
 
-dataset_size: 50000
+dataset_size: null
 val_size: 0.2
 dim: '0,1'
 
 batch_size: 16
 num_workers: 95
-#num_workers: 0
 
-lr: 0.0001
-#weight_decay: 0.05
+lr: 0.00006
