--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,9 +1,8 @@
 random_state: 42
 max_epochs: 3
 
-#model_id: 'facebook/mask2former-swin-tiny-coco-instance'
 model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
-num_labels: 100
+num_labels: 100 # verify in the starter notebook
 num_channels: 3
 
 dataset_size: null
