--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -2,11 +2,11 @@ random_state: 42
 max_epochs: 3
 
 model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
-num_labels: 100 # verify in the starter notebook
+num_labels: 1
 num_channels: 3
 
-dataset_size: null
-val_size: 0.1
+dilation: 10
+val_size: 0.2
 dim: '0,1'
 
 batch_size: 16
