--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,13 +1,15 @@
+dry: true
+
 random_state: 42
 max_epochs: 3
 
-model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
+model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
 num_labels: 1
 num_channels: 3
 
 dilation: 30
 val_size: 0.2
-dim: '0,1'
+dim: '0'
 
 batch_size: 16
 num_workers: 23
