--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,7 +1,7 @@
-dry: true
+dry: false
 
 random_state: 42
-max_epochs: 3
+max_epochs: 10
 
 model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
 num_labels: 1
