--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -7,7 +7,7 @@ model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
 num_labels: 1
 num_channels: 3
 
-dilation: 1 # 30
+dilation: 30
 val_size: 0.2
 dim: '0'
 
