--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -3,6 +3,7 @@ dry: true
 random_state: 42
 max_epochs: 50
 criterion: 'JaccardBCEWithLogitsLoss'
+pos_weight: 15 # computed with md.get_class_frequencies()
 
 model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
 num_labels: 1
