test new config

--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,19 +1,19 @@
-dry: false
+dry: true
 
 random_state: 42
 max_epochs: 100
-criterion: 'DiceLoss'
+criterion: 'JaccardBCEWithLogitsLoss'
 
 #model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
 model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
-num_labels: 1
+num_labels: 100
 num_channels: 3
 contrast_factor: 25
 
-dilation: 30
+dilation: 10
 val_size: 0.2
 dim: '0'
-label_type: 'layer'
+label_type: 'semantic'
 
 batch_size: 16
 num_workers: 23
