--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -2,7 +2,7 @@ dry: true
 
 random_state: 42
 max_epochs: 100
-criterion: 'JaccardBCEWithLogitsLoss'
+criterion: 'JaccardCrossEntropyLoss'
 
 #model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
 model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
