--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -5,7 +5,7 @@ max_epochs: 100
 criterion: 'CrossEntropyLoss'
 
 #model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
-model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
+model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
 num_labels: 100
 num_channels: 3
 contrast_factor: 25
@@ -13,7 +13,7 @@ contrast_factor: 25
 dilation: 10
 val_size: 0.2
 dim: '0'
-label_type: 'semantic'
+label_type: 'instance'
 
 batch_size: 16
 num_workers: 23
