--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,4 +1,4 @@
-dry: false
+dry: true
 
 random_state: 42
 max_epochs: 100
@@ -10,7 +10,7 @@ num_labels: 100
 num_channels: 3
 contrast_factor: 25
 
-dilation: 1
+dilation: 30
 val_size: 0.2
 dim: '0'
 
