--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,4 +1,4 @@
-dry: false
+dry: true
 
 random_state: 42
 max_epochs: 100
@@ -15,7 +15,7 @@ val_size: 0.2
 dim: '0'
 
 label_type: 'semantic' # can be 'border', 'layer', 'semantic' or 'instance'
-label_reorder: false
+label_reorder: true
 
 batch_size: 16
 num_workers: 23
