--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -1,12 +1,12 @@
-dry: true
+dry: false
 
 random_state: 42
 max_epochs: 100
 criterion: 'CrossEntropyLoss'
 
 #model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
-model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
-num_labels: 100
+model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
+num_labels: 1
 num_channels: 3
 contrast_factor: 25
 
@@ -14,10 +14,10 @@ dilation: 30
 val_size: 0.2
 dim: '0'
 
-label_type: 'semantic' # can be 'border', 'layer', 'semantic' or 'instance'
-label_reorder: true
+label_type: 'layer' # can be 'border', 'layer', 'semantic' or 'instance'
+label_reorder: false
 
 batch_size: 16
 num_workers: 23
 
-lr: 0.0001
+lr: 0.0002
