--- a/config/wandb.yml
+++ b/config/wandb.yml
@@ -2,7 +2,7 @@ dry: false
 
 random_state: 42
 max_epochs: 100
-criterion: 'CrossEntropyLoss'
+criterion: 'DiceCrossEntropyLoss'
 
 #model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
 model_id: 'nvidia/segformer-b3-finetuned-ade-512-512'
