--- a/config/segment_anything.yml
+++ b/config/segment_anything.yml
@@ -14,8 +14,9 @@ val_size: 0.2
 dim: '0'
 
 label_type: 'one_hot' # can be 'border', 'layer', 'semantic' 'one_hot' or 'instance'
+num_input_points: 20
 
 batch_size: 16
-num_workers: 23
+num_workers: 0 # 23
 
 lr: 0.0001
