--- a/config/mask2former.yml
+++ b/config/mask2former.yml
@@ -1,13 +1,24 @@
 dry: true
 
+random_state: 42
 max_epochs: 100
 criterion: 'CrossEntropyLoss'
 
-# model_id: 'facebook/sam-vit-huge'
-model_id: 'facebook/sam-vit-base'
+# model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
+# model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
+model_id: 'facebook/mask2former-swin-large-coco-instance'
+num_labels: 100
 num_channels: 3
 contrast_factor: 25
 
 model_prompt: 'k13mlcpr'
+
+dilation: 10
+val_size: 0.2
+dim: '0'
+label_type: 'instance' # can be 'border', 'layer', 'semantic' or 'instance'
+
+batch_size: 16
+num_workers: 23
 
 lr: 0.0001
