--- a/config/mask2former.yml
+++ b/config/mask2former.yml
@@ -2,21 +2,17 @@ dry: true
 
 random_state: 42
 max_epochs: 100
-criterion: 'CrossEntropyLoss'
 
-# model_id: 'nvidia/segformer-b5-finetuned-ade-640-640'
-# model_id: 'nvidia/segformer-b0-finetuned-ade-512-512'
-model_id: 'facebook/mask2former-swin-large-coco-instance'
-num_labels: 100
+model_id: 'facebook/mask2former-swin-base-coco-instance'
 num_channels: 3
 contrast_factor: 25
 
 model_prompt: 'k13mlcpr'
 
-dilation: 10
+dilation: 30
 val_size: 0.2
 dim: '0'
-label_type: 'instance' # can be 'border', 'layer', 'semantic' or 'instance'
+label_type: 'instance'
 
 batch_size: 16
 num_workers: 23
