--- a/config/segment_anything.yml
+++ b/config/segment_anything.yml
@@ -9,11 +9,14 @@ num_labels: 1
 num_channels: 3
 contrast_factor: 25
 
+num_channels_mask: 2
+segformer_id: 'swift-sponge-567-k13mlcpr'
+
 dilation: 30
 val_size: 0.2
 dim: '0'
 
-label_type: 'one_hot' # can be 'border', 'layer', 'semantic' 'one_hot' or 'instance'
+label_type: 'one_hot'
 num_input_points: 20
 
 batch_size: 4
