--- a/config/mask2former.yml
+++ b/config/mask2former.yml
@@ -6,12 +6,15 @@ max_epochs: 100
 model_id: 'facebook/mask2former-swin-base-coco-instance'
 num_channels: 3
 contrast_factor: 25
+num_labels: 1
 
-model_prompt: 'k13mlcpr'
+num_channels_mask: 2
+segformer_id: 'swift-sponge-567-k13mlcpr'
 
 dilation: 30
 val_size: 0.2
 dim: '0'
+
 label_type: 'instance'
 
 batch_size: 16
