--- a/config/config.yml
+++ b/config/config.yml
@@ -14,7 +14,7 @@ path:
   reports:
     root: 'reports'
     figures: 'reports/figures'
-  sumbmissions:
+  submissions:
     root: 'submissions'
 
 wandb:
