--- a/config/segment_anything.yml
+++ b/config/segment_anything.yml
@@ -4,24 +4,23 @@ random_state: 42
 max_epochs: 10
 criterion: 'JaccardCrossEntropyLoss'
 
-#model_id: 'facebook/sam-vit-large'
 model_id: 'facebook/sam-vit-base'
 num_labels: 1
 num_channels: 3
 contrast_factor: 25
 
-num_channels_mask: 2
-segformer_id: 'swift-sponge-567-k13mlcpr'
+# num_channels_mask: 2
+# segformer_id: 'swift-sponge-567-k13mlcpr'
 
-# dilation: 30
 dilation: 1
+num_slices: 10 # change to 300 if you are using full volumes
 val_size: 0.2
 dim: '0'
 
-label_type: 'one_hot'
-num_input_points: 20
+label_type: 'binary'
+# num_input_points: 20
 
-batch_size: 4
+batch_size: 16
 num_workers: 23
 
 lr: 0.0001
