--- a/config/mask2former.yml
+++ b/config/mask2former.yml
@@ -1,9 +1,8 @@
 dry: false
 
 random_state: 42
-max_epochs: 12
+max_epochs: 10
 
-#model_id: 'facebook/mask2former-swin-large-coco-instance'
 model_id: 'facebook/mask2former-swin-base-coco-instance'
 num_channels: 3
 contrast_factor: 25
@@ -11,10 +10,10 @@ num_labels: 1
 
 num_channels_mask: 2
 segformer_id: 'swift-sponge-567-k13mlcpr'
+# sam_id: 'swift-sponge-567-k13mlcpr'
 
-# dilation: 30
 dilation: 1
-# Num of slices per volume # TODO
+num_slices: 10
 val_size: 0.2
 dim: '0'
 
