--- a/config/segment_anything.yml
+++ b/config/segment_anything.yml
@@ -12,8 +12,8 @@ contrast_factor: 25
 # num_channels_mask: 2
 # segformer_id: 'swift-sponge-567-k13mlcpr'
 
-dilation: 1
-num_slices: 10 # change to 300 if you are using full volumes
+dilation: 30
+num_slices: 300
 val_size: 0.2
 dim: '0'
 
