chore: Update notebook and environement

--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,17 @@ dependencies:
   - python=3.10.*
   - pip
   - pip:
+      - jupyter
       - pyyaml
       - tqdm
+      - opencv-python
+      - numpy
+      - pandas
+      - scikit-learn
       - torch
       - torchvision
-      - numpy
       - transformers
       - pytorch-lightning
       - wandb
       - matplotlib
-      - scikit-learn
-      - jupyter
-      - opencv-python
       - plotly
