fix: sam inference feat: add get_folder_path function for inference chore: change rosia-association to association-rosia-demo for demonstration purpose

--- a/config/config.yml
+++ b/config/config.yml
@@ -18,7 +18,7 @@ path:
     root: 'submissions'
 
 wandb:
-  entity: 'association-rosia'
+  entity: 'association-rosia-demo'
   project: 'segmenting-subsurface'
 
 data:
